# cockscreen

./: .gitignore  ANALOG.md  BOM-TME.md  BOM.md  CMakeLists.txt  CMakePresets.json  README.md  mouser-order-draft.csv  mouser-order-gaps.md
cmake/: sync-binary-to-pi.cmake
cmake/toolchains/: pi-zero2w-aarch64.cmake  windows-x86_64-mingw.cmake
config/: default.ini  pi-zero2w-ruler.ini  pi-zero2w.ini  windows-x86_64.ini  x86_64-linux.ini
docs/: ANALOG.md  BOM-TME.md  BOM.md  change-summary-2026-04-web-control.md  diy-enclosure-option-2.md  mouser-order-draft.csv  mouser-order-gaps.md  tme-starter-addon-bom.md  tme-starter-addon-quickbuy.txt
include/cockscreen/app/: CliSupport.hpp
include/cockscreen/core/: ControlFrame.hpp  ModulationBus.hpp
include/cockscreen/runtime/: Application.hpp  AudioAnalysisWindow.hpp  DirectVideoWindow.hpp  MidiInputMonitor.hpp  OscInputMonitor.hpp  RuntimeHelpers.hpp  Scene.hpp  ShaderVideoWindow.hpp  StatusOverlay.hpp  V4l2Capture.hpp  VideoWindow.hpp
include/cockscreen/runtime/application/: Support.hpp
include/cockscreen/runtime/audioanalysis/: Support.hpp  WasapiLoopback.hpp
include/cockscreen/runtime/directvideo/: Support.hpp
include/cockscreen/runtime/midi/: PortDiscovery.hpp
include/cockscreen/runtime/pi/: WaveshareAds1256Monitor.hpp
include/cockscreen/runtime/scene/: Parse.hpp
include/cockscreen/runtime/shadervideo/: Support.hpp
include/cockscreen/runtime/v4l2/: Support.hpp
include/cockscreen/runtime/web/: SceneControlServer.hpp
resources/: README.md
resources/textures/: scene_background.ppm
scenes/: pizero-linux.scene.json  pizero-linux.scene.jsonc  windows.scene.json  windows.scene.jsonc  x86_64-linux.scene.json  x86_64-linux.scene.jsonc
scenes/examples/: annotated.scene.jsonc  defender-autoplay.scene.jsonc
scripts/: bootstrap-pizero-cross.sh  run-local-debug.sh
shaders/: audio_waveform.glsl  basic.glsl  crt_noise.glsl  defender_autoplay.glsl  edge_distortion.glsl  font_awesome_burst.glsl  horro_ink.glsl  ir_boost.glsl  kaleidoscope.glsl  line_sync_error.glsl  lsd_plasma.glsl  midi_dots.glsl  passthrough.glsl  pink_key.glsl  pixel_ruler.glsl  pixelize_loop.glsl  pixelize_viewport.glsl  rave_lasers.glsl  rorschach_inkblot.glsl  smoke.glsl  toy_shader.glsl  toy_shader_image.glsl  toy_synthwave.glsl  triangle_rotate.glsl  video_feedback.glsl  video_sphere.glsl  wireframe_plane.glsl  wireframe_sphere.glsl
src/: main.cpp
src/app/: Arguments.cpp  Config.cpp  DeviceDiscovery.cpp  StartupPaths.cpp
src/core/: ModulationBus.cpp
src/runtime/: Application.cpp  AudioAnalysisWindow.cpp  DirectVideoWindow.cpp  MidiInputMonitor.cpp  RuntimeHelpers.cpp  Scene.cpp  ShaderVideoWindow.cpp  StatusOverlay.cpp  V4l2Capture.cpp  VideoWindow.cpp
src/runtime/application/: Support.cpp
src/runtime/audioanalysis/: Processing.cpp  UI.cpp  WasapiLoopback.cpp
src/runtime/directvideo/: Lifecycle.cpp  Rendering.cpp  Support.cpp  Upload.cpp
src/runtime/helpers/: Media.cpp  Shader.cpp  System.cpp
src/runtime/midi/: Monitor.cpp  PortDiscovery.cpp
src/runtime/osc/: Monitor.cpp
src/runtime/pi/: WaveshareAds1256Monitor.cpp
src/runtime/scene/: Parse.cpp
src/runtime/shadervideo/: Assets.cpp  Lifecycle.cpp  Rendering.cpp  Support.cpp
src/runtime/v4l2/: Buffers.cpp  Capture.cpp  Formats.cpp
src/runtime/web/: SceneControlServer.cpp
